Added mql4 dataset generators

--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,8 @@ Finish It! Workbook.docx
 ~$nish It! Workbook.docx
 nbproject/private/private.xml
 *.xml
+nbproject/private/private.xml
+nbproject/private/private.xml
+nbproject/private/private.xml
+nbproject/private/private.xml
+nbproject/private/private.xml
