--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,7 @@ MANIFEST
 
 # Per-project virtualenvs
 .venv*/
-.vs/preprocessor/v16/.suo
+.vs/feature_engineering/v16/.suo
 .vs/ProjectSettings.json
 .vs/slnx.sqlite
 .vs/VSWorkspaceState.json
