--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ setenv =
     #passenv = PYTHONPATH
     TOXINIDIR = {toxinidir}
     #PYTHONPATH = ../
-    #PYTHONPATH = {toxinidir}/preprocessor
+    #PYTHONPATH = {toxinidir}/feature_engineering
 sitepackages = true
 deps =
      numpy
