--- a/setup.cfg
+++ b/setup.cfg
@@ -56,7 +56,7 @@ testing =
 #     script_name = feature_engineering.module:function
 # For example:
 console_scripts =
-    data-trimmer = feature_engineering.data_trimmer.__main__:main
+    data-trimmer = feature_engineering.heuristic_ts.__main__:main
     standardizer = feature_engineering.standardizer.__main__:main
     sliding_window = feature_engineering.sliding_widow.__main__:main
 # And any other entry points, for example:
