--- a/setup.cfg
+++ b/setup.cfg
@@ -3,14 +3,14 @@
 # http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
 
 [metadata]
-name = feature_engineering
+name = feature_eng
 description = Dataset Trimmer
 author = Harvey Bastidas
 author-email = harveybc@users.noreply.github.com
 license = mit
 long-description = file: README.rst
 long-description-content-type = text/x-rst; charset=UTF-8
-url = http://ingeni-us.com/feature_engineering
+url = http://ingeni-us.com/feature_eng
 project-urls =
     Documentation = https://pyscaffold.org/
 # Change if running only on Windows, Mac or Linux (comma-separated)
@@ -26,7 +26,7 @@ zip_safe = False
 packages = find:
 include_package_data = True
 #package_dir =
-#    = feature_engineering
+#    = feature_eng
 # DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
 setup_requires = pyscaffold>=3.2a0,<3.3a0
 # Add here dependencies of your project (semicolon/line-separated), e.g.
@@ -37,13 +37,13 @@ setup_requires = pyscaffold>=3.2a0,<3.3a0
 # python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
 
 [options.packages.find]
-where = feature_engineering
+where = feature_eng
 exclude =
     tests
 
 [options.extras_require]
 # Add here additional requirements for extra features, to install with:
-# `pip install feature_engineering[PDF]` like:
+# `pip install feature_eng[PDF]` like:
 # PDF = ReportLab; RXP
 # Add here test requirements (semicolon/line-separated)
 testing =
@@ -53,12 +53,12 @@ testing =
 [options.entry_points]
 # Add here console scripts like:
 # console_scripts =
-#     script_name = feature_engineering.module:function
+#     script_name = feature_eng.module:function
 # For example:
 console_scripts =
-    data-trimmer = feature_engineering.heuristic_ts.__main__:main
-    standardizer = feature_engineering.standardizer.__main__:main
-    sliding_window = feature_engineering.sliding_widow.__main__:main
+    data-trimmer = feature_eng.heuristic_ts.__main__:main
+    standardizer = feature_eng.standardizer.__main__:main
+    sliding_window = feature_eng.sliding_widow.__main__:main
 # And any other entry points, for example:
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
@@ -74,7 +74,7 @@ extras = True
 # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
 # in order to write a coverage file that can be read by Jenkins.
 addopts =
-    --cov feature_engineering --cov-report term-missing
+    --cov feature_eng --cov-report term-missing
     --verbose
 norecursedirs =
     dist
@@ -112,7 +112,7 @@ exclude =
 # PyScaffold's parameters when the project was created.
 # This will be used when updating. Do not change!
 version = 3.2.3
-package = feature_engineering
+package = feature_eng
 extensions =
     tox
     travis
