--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ envlist = default
 setenv =
     #passenv = PYTHONPATH
     TOXINIDIR = {toxinidir}
-    #PYTHONPATH = ../
+    PYTHONPATH = {toxinidir}
     #PYTHONPATH = {toxinidir}/feature_eng
 sitepackages = true
 deps =
