--- a/setup.cfg
+++ b/setup.cfg
@@ -56,9 +56,9 @@ testing =
 #     script_name = feature_eng.module:function
 # For example:
 console_scripts =
-    data-trimmer = feature_eng.heuristic_ts.__main__:main
-    standardizer = feature_eng.standardizer.__main__:main
-    sliding_window = feature_eng.sliding_widow.__main__:main
+    heuristic_ts = feature_eng.heuristic_ts.__main__:main
+    mssa_decomposer = feature_eng.mssa_decomposer.__main__:main
+    mssa_predictor = feature_eng.mssa_predictor.__main__:main
 # And any other entry points, for example:
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
