updated to use plugins

--- a/setup.cfg
+++ b/setup.cfg
@@ -55,13 +55,16 @@ testing =
 # console_scripts =
 #     script_name = feature_eng.module:function
 # For example:
+
 console_scripts =
-    heuristic_ts = feature_eng.heuristic_ts.__main__:main
-    mssa_decomposer = feature_eng.mssa_decomposer.__main__:main
-    mssa_predictor = feature_eng.mssa_predictor.__main__:main
+    feature_eng = feature_eng.__main__:main
+
 # And any other entry points, for example:
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
+
+feature_eng.plugins =
+    heuristic_ts = feature_eng.plugins.heuristic_ts
 
 [test]
 # py.test options when running `python setup.py test`
