--- a/setup.cfg
+++ b/setup.cfg
@@ -64,8 +64,8 @@ console_scripts =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
 
 feature_eng.plugins =
-    heuristic_ts = feature_eng.heuristic_ts
-    
+    heuristic_ts = feature_eng:HeuristicTS
+
 [test]
 # py.test options when running `python setup.py test`
 # addopts = --verbose
