--- a/setup.cfg
+++ b/setup.cfg
@@ -64,7 +64,7 @@ console_scripts =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
 
 feature_eng.plugins =
-    heuristic_ts = feature_eng:HeuristicTS
+    heuristic_ts = feature_eng.heuristic_ts:HeuristicTS
 
 [test]
 # py.test options when running `python setup.py test`
