--- a/setup.cfg
+++ b/setup.cfg
@@ -63,13 +63,13 @@ console_scripts =
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
 
-feature_eng.plugins.input =
+feature_eng.plugins_input =
     heuristic_ts = feature_eng.load_csv:LoadCSV
 
-feature_eng.plugins.output =
+feature_eng.plugins_output =
     heuristic_ts = feature_eng.store_csv:StoreCSV
 
-feature_eng.plugins.core =
+feature_eng.plugins_core =
     heuristic_ts = feature_eng.heuristic_ts:HeuristicTS
 
 [test]
