update preinstalled plugin entry pints

--- a/setup.cfg
+++ b/setup.cfg
@@ -64,10 +64,10 @@ console_scripts =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
 
 feature_eng.plugins_input =
-    heuristic_ts = feature_eng.load_csv:LoadCSV
+    load_csv = feature_eng.load_csv:LoadCSV
 
 feature_eng.plugins_output =
-    heuristic_ts = feature_eng.store_csv:StoreCSV
+    store_csv = feature_eng.store_csv:StoreCSV
 
 feature_eng.plugins_core =
     heuristic_ts = feature_eng.heuristic_ts:HeuristicTS
