undated plugins location

--- a/setup.cfg
+++ b/setup.cfg
@@ -64,13 +64,13 @@ console_scripts =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
 
 feature_eng.plugins_input =
-    load_csv = feature_eng.load_csv:LoadCSV
+    load_csv = feature_eng.plugins.input.load_csv:LoadCSV
 
 feature_eng.plugins_output =
-    store_csv = feature_eng.store_csv:StoreCSV
+    store_csv = feature_eng.plugins.output.store_csv:StoreCSV
 
 feature_eng.plugins_core =
-    heuristic_ts = feature_eng.heuristic_ts:HeuristicTS
+    heuristic_ts = feature_eng.plugins.core.heuristic_ts:HeuristicTS
 
 [test]
 # py.test options when running `python setup.py test`
