--- a/setup.cfg
+++ b/setup.cfg
@@ -72,6 +72,7 @@ feature_eng.plugins_output =
 feature_eng.plugins_core =
     heuristic_ts = feature_eng.plugins.core.heuristic_ts:HeuristicTS
     mssa_decomposer = feature_eng.plugins.core.mssa_decomposer:MSSADecomposer
+    mssa_predictor = feature_eng.plugins.core.mssa_predictor:MSSAPredictor
 
 [test]
 # py.test options when running `python setup.py test`
