--- a/tox.ini
+++ b/tox.ini
@@ -14,9 +14,10 @@ setenv =
     #PYTHONPATH = {toxinidir}/feature_eng
 sitepackages = true
 deps =
-     numpy
-     pytest
-     tqdm
+    numpy
+    matplotlib
+    pytest
+    tqdm
 passenv =
     HOME
 commands_pre =
