--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,10 @@ install:
 before_script:
   - git config --global user.email "harveybc@ingeni-us.com"
   - git config --global user.name "harveybc"
+  - git clone https://github.com/harveybc/pymssa
+  - cd pymssa 
+  - python setup.py install
+  - cd
 script:
   - python setup.py develop
   - tox
