--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,12 @@ deps =
 passenv =
     HOME
 commands_pre =
+    git config --global user.email "harveybc@ingeni-us.com"
+    git config --global user.name "harveybc"
+    git clone https://github.com/harveybc/pymssa
+    cd pymssa 
+    python setup.py install
+    cd ..
     python setup.py build
     python setup.py install
 
