--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@
 sudo: false
 language: python
 virtualenv:
-  system_site_packages: true
+  system_site_packages: false
 matrix:
   fast_finish: true
   include:
